option(BUILD_BULLET2_DEMOS OFF)
option(BUILD_BULLET_ROBOTICS_EXTRA OFF)
option(BUILD_BULLET_ROBOTICS_GUI_EXTRA OFF)
option(BUILD_CLSOCKET OFF)
option(BUILD_CONVEX_DECOMPOSITION_EXTRA OFF)
option(BUILD_CPU_DEMOS OFF)
option(BUILD_ENET OFF)
option(BUILD_EXTRAS OFF)
option(BUILD_GIMPACTUTILS_EXTRA OFF)
option(BUILD_HACD_EXTRA OFF)
option(BUILD_INVERSE_DYNAMICS_EXTRA OFF)
option(BUILD_OBJ2SDF_EXTRA OFF)
option(BUILD_OPENGL3_DEMOS OFF)
option(BUILD_PYBULLET OFF)
option(BUILD_SERIALIZE_EXTRA OFF)
option(BUILD_SHARED_LIBS OFF)
option(BUILD_UNIT_TESTS OFF)

add_subdirectory(external/bullet3 ${CMAKE_CURRENT_BINARY_DIR}/bullet3)
target_link_libraries(firesteel PRIVATE BulletDynamics)
target_link_libraries(firesteel PRIVATE BulletCollision)
target_link_libraries(firesteel PRIVATE LinearMath)

set_target_properties(Bullet2FileLoader PROPERTIES FOLDER "External/bullet3")
set_target_properties(Bullet3Collision PROPERTIES FOLDER "External/bullet3")
set_target_properties(Bullet3Common PROPERTIES FOLDER "External/bullet3")
set_target_properties(Bullet3Dynamics PROPERTIES FOLDER "External/bullet3")
set_target_properties(Bullet3Geometry PROPERTIES FOLDER "External/bullet3")
set_target_properties(Bullet3OpenCL_clew PROPERTIES FOLDER "External/bullet3")
set_target_properties(BulletCollision PROPERTIES FOLDER "External/bullet3")
set_target_properties(BulletDynamics PROPERTIES FOLDER "External/bullet3")
set_target_properties(BulletInverseDynamics PROPERTIES FOLDER "External/bullet3")
set_target_properties(BulletSoftBody PROPERTIES FOLDER "External/bullet3")
set_target_properties(LinearMath PROPERTIES FOLDER "External/bullet3")