option(ALSOFT_EXAMPLES OFF)
option(ALSOFT_INSTALL_EXAMPLES OFF)
add_subdirectory(openal-soft ${CMAKE_CURRENT_BINARY_DIR}/openal-soft)
target_include_directories(${PRJ_NAME} PUBLIC openal-soft/include)
target_include_directories(${PRJ_NAME} PUBLIC openal-soft/include/AL)
target_include_directories(${PRJ_NAME} PUBLIC openal-soft/al)
target_include_directories(${PRJ_NAME} PUBLIC openal-soft/alc)
target_include_directories(${PRJ_NAME} PUBLIC openal-soft)
target_link_libraries(firesteel PRIVATE OpenAL)
set_target_properties(OpenAL PROPERTIES FOLDER "External/openal-soft")
set_target_properties(openal-info PROPERTIES FOLDER "External/openal-soft")
set_target_properties(alsoft.common PROPERTIES FOLDER "External/openal-soft")
set_target_properties(alsoft.excommon PROPERTIES FOLDER "External/openal-soft")
set_target_properties(alsoft.fmt PROPERTIES FOLDER "External/openal-soft")
set_target_properties(clang-tidy-check PROPERTIES FOLDER "External/openal-soft")